[gd_scene load_steps=8 format=2]

[ext_resource path="res://Enemies/Fungo/FungoCalmo.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Fungo/Fungo.gd" type="Script" id=2]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/HurtBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Pacifico"

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.0

[node name="Fungo" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.162987, 0.250725 )
texture = ExtResource( 1 )

[node name="WanderController" parent="." instance=ExtResource( 3 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Pacifico = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 4 )]
collision_layer = 8
collision_mask = 128

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 5 )]

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
